--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,13 @@
     </main>
 
     <load src="./partials/footer.html" />
-
+    <div class="cookie-popup" id="cookiePopup">
+      <div class="cookie-content">
+          <div class="cookie-icon"><i data-lucide="cookie"></i></div>
+          <p>Этот сайт использует cookies для улучшения работы. Подробнее — в нашей <a href="./cookies.html">Cookie политике</a>.</p>
+          <button class="btn-primary btn-sm" id="acceptCookies">Принять</button>
+      </div>
+  </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
