--- a/src/contact.html
+++ b/src/contact.html
@@ -61,7 +61,7 @@
 
               <div class="legal-section" style="margin-top: 60px;">
                   <h2>Форма быстрой связи</h2>
-                  <p>Если вы находитесь на этой странице, вы также можете воспользоваться формой обратной связи на <a href="index.html#contact" style="color: var(--primary); text-decoration: underline;">главной странице</a> для мгновенной отправки заявки.</p>
+                  <p>Если вы находитесь на этой странице, вы также можете воспользоваться формой обратной связи на <a href="./#contact" style="color: var(--primary); text-decoration: underline;">главной странице</a> для мгновенной отправки заявки.</p>
               </div>
           </div>
       </div>
